adjusting z-index of mobile nav to prevent content overlapping the menu, closes #6.

--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -332,6 +332,7 @@ header {
 	margin-top: 4.75em;
 	position: absolute;
 	width: 100%;
+	z-index: 1;
 	
 	ul > li {
 		
